--- a/.github/workflows/update-thm.yml
+++ b/.github/workflows/update-thm.yml
@@ -8,8 +8,10 @@ jobs:
   update-readme:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Update Badge
-        uses: grzywacz/tryhackme-stats-card-action@v1
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Update THM Card
+        uses: p4p1/tryhackme-stats-card-action@main
         with:
           username: r9ruben
