--- a/.github/workflows/update-thm.yml
+++ b/.github/workflows/update-thm.yml
@@ -13,3 +13,11 @@ jobs:
 
       - name: Run THM script
         run: python scripts/thm_stats.py
+        
+      - name: Commit README changes
+        run: |
+            git config --global user.name "github-actions"
+            git config --global user.email "github-actions@github.com"
+            git add README.md
+            git commit -m "Update README with THM stats" || echo "No changes to commit"
+            git push
