--- a/.github/workflows/update-thm.yml
+++ b/.github/workflows/update-thm.yml
@@ -1,28 +1,31 @@
 name: Update THM Stats
-
 on:
-  workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * *' # Runs daily at midnight
+  workflow_dispatch: # Allows manual run
 
 jobs:
-  run-script:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: pip install requests
 
       - name: Run THM script
         run: python scripts/thm_stats.py
-        
-      - name: Commit README changes
-        run: |
-            git config --global user.name "github-actions"
-            git config --global user.email "github-actions@github.com"
-            git add README.md
-            git commit -m "Update README with THM stats" || echo "No changes to commit"
-            git push
-            
-      - name: Install dependencies
-        run: |
-         pip install requests beautifulsoup4
 
+      - name: Commit and Push changes
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add README.md
+          git commit -m "Update THM stats" || echo "No changes to commit"
+          git push
