--- a/.github/workflows/update-thm.yml
+++ b/.github/workflows/update-thm.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           python-version: '3.x'
       - name: Install dependencies
-        run: pip install requests
+        run: pip install curl_cffi
       - name: Run THM script
         run: python scripts/thm_stats.py
       - name: Commit and Push
